# dfinance-icp

./: .gitignore  Cargo.toml  LICENSE  README.md  canbench.yml  canbench_results.yml  canister_ids.json  deployxrc.sh  dfx.json  did_generate.sh  generate_did.sh  get_ledger_wasm.sh  ledger.did  ledger_canister.wasm  package-lock.json  package.json  treeoutput.txt  wget-log
deployments/: deployLpToken.sh  deployckBTC.sh  deployckETH.sh
scripts/: all_scripts.sh  assign.sh  borrow_test.sh  check_balance.sh  deploy_atoken.sh  deploy_ckbtc.sh  deploy_cketh.sh  deploy_debttoken.sh  deploy_dtoken.sh  drain.sh  generate_candid.sh  generate_did.sh  icrc2_transfer.sh  initial_reserve.sh  initialize_reserve.sh  mockreserve.sh  supply_test.sh  test_flow.sh  test_flow_new.sh  tranfer_and_reserve.sh  transfer_to_dtoken.sh  user.sh
scripts/balance_scripts/: abc.sh  allownance.sh  check_balance.sh  faucet.sh  tranfer_and_reserve.sh  transfer_to_dtoken.sh  transfer_to_user1.sh
scripts/deploy_scripts/: deploy.sh  deploy_all_ledger.sh  deploy_ckbtc.sh  deploy_cketh.sh  deploy_ckusdc_ledger.sh  deploy_debttoken.sh  deploy_dtoken.sh  deploy_icp_ledger.sh  deploy_token_ledger.sh  initialize.sh  initialize_tokens.sh
scripts/integration_scripts/: reserve_data.sh  user_data.sh
scripts/logic_scripts/: all_logics.sh  borrow.sh  borrow_testnet.sh  delete_user.sh  disable_collateral.sh  liquidation.sh  login.sh  repay.sh  supply.sh  supply_testnet.sh  user.sh  user_with_low_health.sh  users.sh  withdraw.sh
scripts/mainnet/: add_controller.sh  deploy.sh  upgrade_canister.sh
scripts/reserve_scripts/: check_access.sh  initialize.sh  initialize_reserve.sh  mockreserve.sh  reset_reserve_value.sh
scripts/test/: calculationTesting.sh  concurrency.sh  pocket_ic.sh  rollBacks.sh  stressTesting.sh
scripts/token_script/: add_controller.sh  all_token_script.sh  (+6 more)
src/debttoken/: Cargo.toml  debttoken.did
src/debttoken/src/: lib.rs
src/dfinance_backend/: Cargo.toml  dfinance_backend.did
src/dfinance_backend/src/: api.rs  constants.rs  create_new_canister.rs  dynamic_canister.rs  guards.rs  lib.rs  liq_provider_info.rs  memory.rs  new_canister.rs  new_types.rs  provide_liquidity.rs  state.rs  state_handler.rs  types.rs  user.rs
src/dfinance_backend/src/api/: deposit.rs  functions.rs  ivariable_debt_token.rs  liquidity_provider_info.rs  mod.rs  resource_manager.rs  state_handler.rs  user_info.rs
src/dfinance_backend/src/api/declaration/: user.rs
src/dfinance_backend/src/api/implementation/: user.rs
src/dfinance_backend/src/canbench_tests/: benchfile.rs  mod.rs
src/dfinance_backend/src/constants/: asset_address.rs  asset_data.rs  errors.rs  interest_variables.rs  memory.rs  mod.rs
src/dfinance_backend/src/declarations/: assets.rs  mod.rs  pagination.rs  state.rs  storable.rs  transfer.rs
src/dfinance_backend/src/dependencies/: access_control.rs  address.rs  context.rs  icrc2.rs  mod.rs  ownable.rs  safe_cast.rs  safe_icrc2.rs  state_handler.rs
src/dfinance_backend/src/dependencies/upgradeability/: base_upgradeability_proxy.rs  proxy.rs
src/dfinance_backend/src/implementations/: mod.rs  reserve.rs  state.rs
src/dfinance_backend/src/interface/: IpoolConfig.rs  idefi_incentives_controller.rs  iinitializable_d_token.rs  iinitializable_debt_token.rs  ipool_addresses_provider.rs
src/dfinance_backend/src/interfaces/: d_token.rs  dfinance_incentive_controller.rs  initializableDebtToken.rs  initializable_dtoken.rs  mod.rs  pool.rs  pool_address_provider.rs  price_oracle_getter.rs  price_oracle_sentinel.rs  reserve_interest_rate_strategy.rs  scaled_balanced_token.rs  stable_debt_token.rs  variable_debt_token.rs
src/dfinance_backend/src/logic/: deposit.rs
src/dfinance_backend/src/math/: launchpad.rs  lending_borrowing.rs  mod.rs  staking.rs  timing.rs  yield_rewards.rs
src/dfinance_backend/src/protocol/: mod.rs
src/dfinance_backend/src/protocol/configuration/: configurator.rs  mod.rs  reserve_configuration.rs
src/dfinance_backend/src/protocol/libraries/: mod.rs
src/dfinance_backend/src/protocol/libraries/configuration/: mod.rs  reserveConfg.rs  reserve_config.rs  reserve_configuration.rs  user_configuration.rs
src/dfinance_backend/src/protocol/libraries/defi_upgradeability/: base_immutable_admin_upgr_proxy.rs  version_initializable.rs
src/dfinance_backend/src/protocol/libraries/helpers/: constants.rs  errors.rs  mod.rs
src/dfinance_backend/src/protocol/libraries/logic/: XRC.rs  borrow.rs  borrow_logic.rs  configuration.rs  configurator_logic.rs  deposit.rs  generic_logic.rs  interest_rate.rs  isolation_mode_logic.rs  liquidation.rs  mod.rs  reserve.rs  reserve_logic.rs  supply.rs  supply_logic.rs  timer.rs  update.rs  user.rs  validation.rs  validation_logic.rs
src/dfinance_backend/src/protocol/libraries/logic/interface/: ivariable_debt_token.rs  mod.rs
src/dfinance_backend/src/protocol/libraries/math/: calculate.rs  div_mul_math.rs  launchpad.rs  lending_borrowing.rs  mathUtils.rs  math_utils.rs  mod.rs  percentage.rs  percentage_maths.rs  staking.rs  timing.rs  wadray.rs  wath_ray_math.rs  yield_rewards.rs
src/dfinance_backend/src/protocol/libraries/types/: assets.rs  configurator_input_types.rs  data_types.rs  datatypes.rs  memory.rs  mod.rs
src/dfinance_backend/src/protocol/pool/: poolConfig.rs
src/dfinance_backend/src/protocol/tokenization/: dtoken.rs  mod.rs  stable_debt_token.rs  variable_debt_token.rs
src/dfinance_backend/src/protocol/tokenization/base/: debttokenbase.rs  eip712base.rs  incentivized_icrc2.rs  mintable_incentivized_icrc2.rs  mod.rs  scaled_balance_token_base.rs
src/dfinance_backend/src/types/: assets.rs  mod.rs  user.rs
src/dfinance_backend/tests/: borrow.rs  calculationTesting.rs  ckbtc_setup.rs  concurrency.rs  d_token_setup.rs  error.rs  faucet.rs  functions.rs  liquidation.rs  repay.rs  rollBacks.rs  stressTesting.rs  structs.rs  supply.rs  test.rs  test2.rs  test3.rs  withdraw.rs
src/dfinance_backend/tests/utils/: common_functions.rs  error.rs  mod.rs  structs.rs
src/dtoken/: Cargo.toml  dtoken.did
src/dtoken/src/: lib.rs
(+267 files in other folders)
