[workspace]
members = ["src/dfinance_backend", "src/dtoken", "src/debttoken"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.80"
arrayvec = "0.7.4"
askama = { version = "0.12.1", features = ["serde-json"] }
assert_matches = "1.5.0"
async-recursion = "1.0.5"
async-trait = "0.1"
async-scoped = { version = "0.8", features = ["use-tokio"] }
axum = { version = "0.7.4", features = ["json"] }
backoff = "0.4"
base64 = { version = "0.13.1" }
# build-info and build-info-build MUST be kept in sync!
build-info = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7" }
build-info-build = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7", default_features = false }
bytes = "1.6.0"
candid = { version = "0.10.6" }
candid_parser = { version = "0.1.2" }
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "clock",
    "serde",
] }
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "string"] }
# cloudflare v0.11 is broken, master is partly fixed but unreleased yet.
# see:
# - https://github.com/cloudflare/cloudflare-rs/issues/222
# - https://github.com/cloudflare/cloudflare-rs/issues/236
cloudflare = { git = "https://github.com/blind-oracle/cloudflare-rs.git", rev = "386c8c6a0a95ad0c8a87aa1aac27b26a6cfec5cc", feature = [
    "rustls-tls",
] }
criterion = { version = "0.5.1", features = ["html_reports","async_tokio"] }
crossbeam-channel = "0.5.11"
curve25519-dalek = { version = "4.1.3", features = ["group", "precomputed-tables"] }
ed25519-dalek = { version = "2.1.1", features = ["std", "zeroize", "digest", "batch", "pkcs8", "pem", "hazmat"] }
ethnum = { version = "1.3.2", features = ["serde"] }
flate2 = "1.0.30"
futures = "0.3.30"
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.3.1", features = ["full"] }
hyper-rustls = { version = "0.24.2", features = ["http2"] }
hyper-socks2 = { version = "0.8.0", default_features = false, features = [
    "rustls",
] }
ic-agent = { version = "0.35.0", features = ["hyper"] }
ic-cdk = "0.13.2"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
ic_principal = { version = "0.1.1", default-features = false }
ic-response-verification = "2.3.0"
ic-http-certification = "2.3.0"
ic-certification = "2.3.0"
ic-cbor = "2.3.0"
ic-stable-structures = "0.6.4"
ic-utils = { version = "0.35.0", features = ["raw"] }
ic-btc-interface = "0.2.0"
ic-btc-validation = "0.1.0"
ic-btc-test-utils = "0.1.0"
itertools = "0.12.0"
k256 = { version = "0.13.3", default_features = false, features = [
    "arithmetic",
    "ecdsa",
    "pem",
    "pkcs8",
    "precomputed-tables",
    "schnorr",
    "std",
] }
lazy_static = "1.4.0"
libc = "0.2.155"
libnss = "0.5.0"
local-ip-address = "0.5.6"
mockall = "0.12.1"
mockito = "1.2.0"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
nix = "0.24.3"
num-traits = { version = "0.2.14", features = ["libm"] }
opentelemetry = { version = "0.23.0", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.16.0"
opentelemetry-otlp = { version = "0.16.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.23.0", features = ["trace", "rt-tokio"] }
p256 = { version = "0.13.2", default_features = false, features = [
    "arithmetic",
    "ecdsa",
    "pem",
    "pkcs8",
] }
ping = "0.5.0"
pkcs8 = "0.10.2"
pretty_assertions = "1.4.0"
pprof = { version = "0.13.0", default-features = false, features = [
    "flamegraph",
    "prost-codec",
] }
prometheus = { version = "0.13.4", features = ["process"] }
prost = "0.12.3"
prost-build = "0.12.3"
protobuf = "2.28.0"
quinn = { version = "0.10.2", features = ["ring"] }
quinn-udp = "0.5.1"
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rcgen = { version = "0.13.1", features = ["zeroize"] }
regex = "1.10.4"
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "multipart",
    "rustls-tls",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }
rstest = "0.19.0"
rustls = { version = "0.23.8", default-features = false, features = ["ring", "logging", "tls12"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
serde_json = { version = "1.0.117", features = ["std"] }
serde_with = "1.14.0"
serde_yaml = "0.9.33"
signature = "2.2.0"
simple_asn1 = "0.6.2"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "nested-values",
    "release_max_level_debug",
    "release_max_level_trace",
] }
slog-async = { version = "2.8.0", features = ["nested-values"] }
slog-scope = "4.4.0"
slog-term = "2.9.1"
socket2 = { version = "0.5.7", features = ["all"] }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
syn = { version = "1.0.109", features = ["fold", "full"] }
sync_wrapper = "1.0.1"
tempfile = "3.10.1"
thiserror = "1.0.57"
threadpool = "1.8.1"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-metrics = "0.3.1"
tokio-rustls = { version = "0.26.0", features = ["logging", "ring", "tls12"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "cors",
    "limit",
    "trace",
    "request-id",
    "util",
    "compression-full",
    "tracing",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
turmoil = "0.6.2"
x509-cert = { version = "0.2.5", features = ["builder", "hazmat"] }
x509-parser = { version = "0.16.0" }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
zstd = "0.13.1"


[workspace.dependencies.ic-wasm]
version = "^0.7.1"
default-features = false
features = ["exe"]