[package]
name = "dfinance_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
candid-extractor = "0.1.2"
ic-cdk = "0.13"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.7.0"
ic-stable-structures = "0.6.2"
serde = "1.0.197"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
serde_bytes = "0.11.14"
time = "0.3.36"
once_cell = "1.19.0"
