[package]
name = "dfinance_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = { version = "0.1.4", optional = true }


candid = "0.10"
candid-extractor = "0.1.4"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
ic-cdk-timers = "0.7"                                             # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
serde = "1.0.203"
serde_bytes = "0.11.15"
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git" }
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
time = "0.3.36"
once_cell = "1.19.0"
uint = "0.8"
dotenv = "0.15.0"
env_logger = "0.11"
ic-xrc-types = "1.0.0"
regex.workspace = true

[dev-dependencies]
pocket-ic = "4.0.0"
tokio = { version = "1", features = ["full"] }



